--- a/bet-the-ponies.css
+++ b/bet-the-ponies.css
@@ -27,6 +27,25 @@ footer {
 div.sky {
     grid-area: 1 / 1 / 2 / 2;
     background-color: blue;
+    display: flex;
+    justify-content: flex-end;
+}
+
+ul {
+    list-style: none;
+    background-color: black;
+    color: white;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    width: 10%;
+    justify-content: space-evenly;
+}
+
+li {
+    border: 1px solid white;
 }
 
 div.lane-1 {
