--- a/bet-the-ponies.css
+++ b/bet-the-ponies.css
@@ -48,6 +48,10 @@ li {
     border: 1px solid white;
 }
 
+i {
+    width: 5vw;
+}
+
 div.lane-1 {
     grid-area: 2 / 1 / 3 / 2;
     background-color: #855439;
